<resources>
    <string name="app_name">DotCinema</string>
    <string name="hello_world">Prosze się zalogować</string>
    <string name="action_settings">Ustawienia</string>
    <string name="pass">Hasło</string>
    <string name="nick">Nick albo e-mail</string>
    <string name="forgot">Zapomniane hasło?</string>
    <string name="register">Zarejestruj się</string>
    <string name="registerHelp">lub stwórz nowe konto</string>
    <string name="loginButt">Zaloguj się</string>
    <string name="title_activity_register_screen">Rejestracja</string>
    <string name="title_activity_main_profile_screen">Ekran główny</string>
    <string name="user_exist">Użytkownik o tym nicku już istnieje</string>
    <string name="ok">Ok</string>
    <string name="user_dont">Użytkownik nie istnieje</string>
    <string name="bad_pass">Złe hasło</string>
    <string name="title_activity_reservation_screen">ReservationScreen</string>
</resources>
