<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginScreen">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nickInput"
        android:layout_below="@+id/nickOrEmailText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="Sam" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passpowrdInput"
        android:layout_below="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/nickInput"
        android:layout_alignEnd="@+id/nickInput" />

    <TextView
        android:text="@string/nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nickOrEmailText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordText"
        android:layout_below="@+id/nickInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/registerHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpRegisterText"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButt"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passpowrdInput"
        android:layout_centerHorizontal="true"
        android:onClick="startLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/RegisterButton"
        android:layout_below="@+id/helpRegisterText"
        android:layout_centerHorizontal="true"
        android:onClick="startRegistration" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:id="@+id/recoverPassButton"
        android:layout_below="@+id/RegisterButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
